fix whitespace

--- a/style.css
+++ b/style.css
@@ -343,7 +343,7 @@ body {
         display: flex;
         flex-direction: row;
         justify-content: center;
-        width: 100%;
+        /* width: 100%; */
         gap: var(--space-400);
     }
 
@@ -520,7 +520,7 @@ body {
 
     .img-group img {
         max-width: var(--size-256);
-        max-height: var(--size-256);
+        min-height: var(--size-256);
     }
 
     .footer-cta {
